[metadata]
name = com_lib
version = 0.1.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Multi-threaded serial port abstraction layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/com_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    codecs_lib =
packages = codecs_lib, codecs_lib.tests
install_requires =
    introspection_lib >= 0.3
