[metadata]
name = com_lib
version = 1.0.2
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Serial port abstraction layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/com_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    com_lib =
packages = com_lib, com_lib.tests
install_requires =
    pyserial >= 3.4
    introspection_lib >= 0.5
    codecs_lib >= 1.0.1

[options.package_data]
* = dependencies.json